features updates and swagger docs
