# controller/company/company-controller.js
@@ -6,20 +6,23 @@ const getAllCompany = async (req, res) => {
 	res.status(200).json(allCompanies);
 };
 
+const getCurrentCompany = async (req, res) => {
+	try {
+		const {id} = req.user;
+		const Company = await CompanySchema.findById(id);
+		const currentCompany = Object.assign(Company, {company_password: undefined});
+		res.status(200).json(currentCompany);
+	} catch (error) {
+		res.status(500).json(errorHandler(error));
+	}
+};
+
+
 const getSingleCompany = async (req, res) => {
-	const {id} = req.user;
-	const jobId = req.params.id;
+	const {company_id} = req.params;
+	const Company = await CompanySchema.findOne({company_id}, '-company_password');
+	res.status(200).json(Company);
 };
 
-const getCompanyJob = async (req, res) => {
-	const {id} = req.user;
-	const companyJob = await CompanySchema.findById({posted_by: id});
-	console.log(companyJob);
-};
-const addCompany = async (req, res) => {
-	const {id} = req.user;
-	const companyJob = await CompanySchema.findById({posted_by: id});
-	console.log(companyJob);
-};
 
-module.exports = {getAllCompany};
+module.exports = {getCurrentCompany, getAllCompany, getSingleCompany};
