# router/job-routes.js
@@ -1,14 +1,7 @@
 const router = require('express').Router();
-const {
-	getAllJobs,
-	getSingleJob,
-	getCompanyJob,
-	postNewJob,
-	updateJob,
-	deleteJob,
-} = require('../controller/job/job-controller.js');
+const {getAllJobs, getSingleJob} = require('../controller/job/job-controller.js');
 
 router.get('/', getAllJobs);
-router.post('/', postNewJob);
+router.get('/:job_id', getSingleJob);
 
 module.exports = router;
