# router/public-company-routes.js
@@ -1,0 +1,10 @@
+const router = require('express').Router();
+const {
+	getAllCompany,
+	getSingleCompany,
+} = require('../controller/company/company-controller.js');
+
+router.get('/', getAllCompany);
+router.get('/:company_id', getSingleCompany);
+
+module.exports = router;
