# swagger-output.json
@@ -137,9 +137,6 @@
               "schema": {
                 "type": "object",
                 "properties": {
-                  "company_description": {
-                    "example": "any"
-                  },
                   "company_location": {
                     "example": "any"
                   },
@@ -167,11 +164,11 @@
         "description": "",
         "parameters": [],
         "responses": {
+          "201": {
+            "description": "Created"
+          },
           "400": {
             "description": "Bad Request"
-          },
-          "404": {
-            "description": "Not Found"
           }
         },
         "requestBody": {
@@ -180,10 +177,10 @@
               "schema": {
                 "type": "object",
                 "properties": {
-                  "email": {
+                  "company_password": {
                     "example": "any"
                   },
-                  "company_password": {
+                  "emailOrCompanyID": {
                     "example": "any"
                   }
                 }
@@ -963,14 +960,22 @@
           },
           "400": {
             "description": "Bad Request"
+          },
+          "500": {
+            "description": "Internal Server Error"
           }
-        }
+        },
+        "security": [
+          {
+            "bearerAuth": []
+          }
+        ]
       }
     },
-    "/api/job/": {
+    "/api/company/job/": {
       "get": {
         "tags": [
-          "Job"
+          "Company Details"
         ],
         "description": "",
         "parameters": [],
@@ -981,11 +986,16 @@
           "400": {
             "description": "Bad Request"
           }
-        }
+        },
+        "security": [
+          {
+            "bearerAuth": []
+          }
+        ]
       },
       "post": {
         "tags": [
-          "Job"
+          "Company Details"
         ],
         "description": "",
         "parameters": [],
@@ -999,13 +1009,181 @@
           "500": {
             "description": "Internal Server Error"
           }
-        }
+        },
+        "security": [
+          {
+            "bearerAuth": []
+          }
+        ]
+      }
+    },
+    "/api/company/job/{job_id}": {
+      "put": {
+        "tags": [
+          "Company Details"
+        ],
+        "description": "",
+        "parameters": [
+          {
+            "name": "job_id",
+            "in": "path",
+            "required": true,
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "responses": {
+          "400": {
+            "description": "Bad Request"
+          }
+        },
+        "security": [
+          {
+            "bearerAuth": []
+          }
+        ]
+      },
+      "delete": {
+        "tags": [
+          "Company Details"
+        ],
+        "description": "",
+        "parameters": [
+          {
+            "name": "job_id",
+            "in": "path",
+            "required": true,
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "responses": {
+          "400": {
+            "description": "Bad Request"
+          }
+        },
+        "security": [
+          {
+            "bearerAuth": []
+          }
+        ]
+      }
+    },
+    "/api/company/public/": {
+      "get": {
+        "tags": [
+          "Public"
+        ],
+        "description": "",
+        "parameters": [],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "400": {
+            "description": "Bad Request"
+          }
+        },
+        "security": [
+          {
+            "bearerAuth": []
+          }
+        ]
+      }
+    },
+    "/api/company/public/{company_id}": {
+      "get": {
+        "tags": [
+          "Public"
+        ],
+        "description": "",
+        "parameters": [
+          {
+            "name": "company_id",
+            "in": "path",
+            "required": true,
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "400": {
+            "description": "Bad Request"
+          }
+        },
+        "security": [
+          {
+            "bearerAuth": []
+          }
+        ]
+      }
+    },
+    "/api/job/": {
+      "get": {
+        "tags": [
+          "Public"
+        ],
+        "description": "",
+        "parameters": [],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "400": {
+            "description": "Bad Request"
+          }
+        },
+        "security": [
+          {
+            "bearerAuth": []
+          }
+        ]
+      }
+    },
+    "/api/job/{job_id}": {
+      "get": {
+        "tags": [
+          "Public"
+        ],
+        "description": "",
+        "parameters": [
+          {
+            "name": "job_id",
+            "in": "path",
+            "required": true,
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "400": {
+            "description": "Bad Request"
+          },
+          "404": {
+            "description": "Not Found"
+          }
+        },
+        "security": [
+          {
+            "bearerAuth": []
+          }
+        ]
       }
     },
     "/api/users/{username}": {
       "get": {
         "tags": [
-          "Users"
+          "Public"
         ],
         "description": "",
         "parameters": [
@@ -1028,13 +1206,18 @@
           "404": {
             "description": "Not Found"
           }
-        }
+        },
+        "security": [
+          {
+            "bearerAuth": []
+          }
+        ]
       }
     },
     "/api/users/": {
       "get": {
         "tags": [
-          "Users"
+          "Public"
         ],
         "description": "",
         "parameters": [],
@@ -1048,13 +1231,18 @@
           "402": {
             "description": "Payment Required"
           }
-        }
+        },
+        "security": [
+          {
+            "bearerAuth": []
+          }
+        ]
       }
     },
-    "/test/": {
+    "/api/test/": {
       "get": {
         "tags": [
-          "Company Details"
+          "Public"
         ],
         "description": "",
         "parameters": [],
@@ -1065,11 +1253,16 @@
           "400": {
             "description": "Bad Request"
           }
-        }
+        },
+        "security": [
+          {
+            "bearerAuth": []
+          }
+        ]
       },
       "post": {
         "tags": [
-          "Company Details"
+          "Public"
         ],
         "description": "",
         "parameters": [],
@@ -1080,7 +1273,12 @@
           "400": {
             "description": "Bad Request"
           }
-        }
+        },
+        "security": [
+          {
+            "bearerAuth": []
+          }
+        ]
       }
     },
     "/api/upload-image/": {
@@ -1110,7 +1308,12 @@
           "500": {
             "description": "Internal Server Error"
           }
-        }
+        },
+        "security": [
+          {
+            "bearerAuth": []
+          }
+        ]
       },
       "get": {
         "tags": [
@@ -1122,7 +1325,12 @@
           "400": {
             "description": "Bad Request"
           }
-        }
+        },
+        "security": [
+          {
+            "bearerAuth": []
+          }
+        ]
       }
     }
   },
